tests/baselines/reference/parserErrorRecovery_LeftShift1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/LeftShifts/parserErrorRecovery_LeftShift1.ts (3 errors) ====
    retValue = bfs.VARIABLES >> );
                                ~
!!! error TS1109: Expression expected.
    ~~~~~~~~
!!! error TS2304: Cannot find name 'retValue'.
               ~~~
!!! error TS2304: Cannot find name 'bfs'.